packages/survey-creator-core/src/responsivity.scss
@use "./variables" as *;

.svc-creator--mobile {
  .sd-root-modern,
  .sd-container-modern {
    --sd-base-padding: var(--sjs2-spacing-x300);
    --sd-base-vertical-padding: var(--sjs2-spacing-x200);
    --sd-page-vertical-padding: var(--sjs2-spacing-x200);
  }

  .svc-question__content:not(.svc-question__content--composite-question) {
    .sd-question__content {
      // margin-left: var(--sjs2-spacing-negative-x300);
      // margin-right: var(--sjs2-spacing-negative-x300);
      // padding-left: var(--sjs2-spacing-x300);
      // padding-right: var(--sjs2-spacing-x300);

      .sd-selectbase__column {
        max-width: initial;
        display: block;
        margin-left: 0;
      }
    }

    & > .svc-question__dropdown-choices--wrapper {
      width: calc(100% + var(--sjs2-spacing-x600));
      margin: 0 var(--sjs2-spacing-negative-x300);

      & > div {
        width: calc(100% - var(--sjs2-spacing-x600));
        margin: 0 var(--sjs2-spacing-x300);
      }
    }
  }

  .svc-question__drag-area {
    height: var(--sjs2-size-x300);
  }

  .svc-question__content--selected {
    .svc-rating-question-controls {
      bottom: calc(var(--sjs2-base-unit-spacing) * 10);
    }
  }
  .svc-designer-header + svc-page-wrapper + .svc-page,
  .svc-designer-header + .svc-page {
    margin-top: var(--sjs2-spacing-x100);
  }

  .svc-page__content {
    padding-left: 0;
    padding-right: 0;
    border: 0;

    .sd-page__title {
      margin: 0;
    }

    &.svc-page__content--selected {
      .sd-page__title {
        margin: var(--sjs2-spacing-x250) 0 0 0;
      }
    }
  }

  .svc-page__footer {
    margin-left: var(--sjs2-spacing-x300);
    margin-right: var(--sjs2-spacing-x300);
    margin-top: var(--sjs2-spacing-x300);
  }

  .svc-designer-placeholder-page {
    .svc-page__footer {
      margin-top: 0;
    }
  }

  .svc-tab-designer {
    justify-content: initial;

    .sd-title.sd-container-modern__title {
      padding: var(--sjs2-spacing-x300);
      padding-block-end: var(--sjs2-spacing-x200);
      flex-direction: column-reverse;
      align-items: flex-start;

      .svc-logo-image {
        margin-top: 0;
      }

      .svc-logo-image-placeholder {
        margin-left: var(--sjs2-spacing-negative-x200);
        margin-top: var(--sjs2-spacing-negative-x200);
      }

      h3 {
        @include sjs2--typography--medium-strong;
        margin: 0;
      }

      h5 {
        margin: 0;
      }
    }
  }

  .svc-tab-designer {
    .sd-container-modern {
      padding: 0;
    }
  }

  .svc-properties-wrapper {
    width: 100%;
  }

  .svc-question__content-actions {
    width: calc(100% + var(--sjs2-spacing-x250));
  }
}

